--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,13 @@ html, body {
 }
 
 
+body {
+  font-family: "Helvetica Neue",
+    Arial,
+    "Hiragino Kaku Gothic ProN",
+    "Hiragino Sans",
+    Meiryo,
+    sans-serif;
+}
+
+
